# Flight_price_prediciton

./: .gitignore  README.md  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
data/raw/: .gitignore  Clean_Dataset.csv.dvc
notebooks/: 01_eda.ipynb  02.Preprocessing.ipynb  03_Linear_regression.ipynb  04_Random_Forest.ipynb
src/api/: api.py  app_front.py
src/ml/: model.py  preprocessing.py  train.py
tests/: conftest.py  test_model.py  test_preprocessing.py
